--- a/run.html
+++ b/run.html
@@ -23,8 +23,8 @@
 Test app
 <!-- OpenLaszlo Application-->
 <script type="text/javascript">
-  lz.swfEmbed({url: 'http://localhost:8080/lps-4.3.0/my-apps/LzG.lzx?lzt=swf&debug=true&lzr=swf8', bgcolor: '#ffffff', width: '800', height: '640', id: 'lzapp', accessible: 'false'});
-  //Lz.swfEmbed({url: 'LzG.lzx.lzr=swf8.swf?&lzproxied=false', bgcolor: '#ffffff', width: '640', height: '800', id: 'lzapp', accessible: 'false'});
+  //lz.swfEmbed({url: 'http://localhost:8080/lps-4.3.0/my-apps/LzG.lzx?lzt=swf&debug=true&lzr=swf8', bgcolor: '#ffffff', width: '800', height: '640', id: 'lzapp', accessible: 'false'});
+  Lz.swfEmbed({url: 'LzG.swf7.swf?&lzproxied=false', bgcolor: '#ffffff', width: '640', height: '800', id: 'lzapp', accessible: 'false'});
 </script>
 Does this even work?
 </body>
